--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio-serial = { version = "4.3.3", optional = true, default-features = false }
 [dev-dependencies]
 env_logger = "0.7"
 futures = "0.3"
+hyper = "0.13"
 tokio = { version = "0.2", features = ["tcp", "macros"] }
 
 [features]
